--- a/src/AppBundle/Resources/views/product/create.html.twig
+++ b/src/AppBundle/Resources/views/product/create.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="container">
         <div class="col-lg-12">
-            <form method="POST" action="{{ path('storeProduct') }}">
+            <form method="POST" action="{{ path('product_store') }}">
                 <div class="row">
                     <div class="form-group row">
                         <label for="formGroupExampleInput" class="col-lg-2">Name</label>
