--- a/src/AppBundle/Resources/views/product/update.html.twig
+++ b/src/AppBundle/Resources/views/product/update.html.twig
@@ -3,7 +3,7 @@
 {% block body  %}
 <div class="container">
     <div class="col-lg-12">
-        <form method="POST" action="{{ path('updateProduct', {'id': product.id}) }}">
+        <form method="POST" action="{{ path('product_update', {'id': product.id}) }}">
             <div class="row">
                <div class="form-group row">
                    <label for="formGroupExampleInput" class="col-lg-2">Name</label>
